--- a/notes/gradient-test.ipynb
+++ b/notes/gradient-test.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "tensor([9.])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,6 +179,115 @@
     "#               gradient(LS) = 3x**2 + 6x\n",
     "y.backward()\n",
     "x.grad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**vectorizing**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 2.],\n",
+      "        [3., 4.]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    return x**2\n",
+    "\n",
+    "x = torch.tensor([[1.0, 2.0], [3.0, 4.0]], requires_grad=True)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 1.,  4.],\n",
+      "        [ 9., 16.]], grad_fn=<PowBackward0>)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2., 4.],\n",
+       "        [6., 8.]], grad_fn=<MulBackward0>)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(f(x))\n",
+    "grad(f(x), x, grad_outputs=torch.ones_like(x), create_graph=True)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., 3.]], grad_fn=<MmBackward>)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.tensor([[1.0, 1.0]], requires_grad=True)\n",
+    "ker = torch.tensor([[1.0, 2.0], [-1.0, 1.0]], requires_grad=True)\n",
+    "torch.mm(x, ker)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[ 2.,  4.],\n",
+       "         [27., 48.]]),)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    res = torch.zeros_like(x)\n",
+    "    res[0] = x[0] ** 2\n",
+    "    res[1] = x[1] ** 3\n",
+    "    return res\n",
+    "\n",
+    "x = torch.tensor([[1.0, 2.0], [3.0, 4.0]], requires_grad=True)\n",
+    "grad(f(x), x, grad_outputs=torch.ones_like(x))"
    ]
   },
   {
